rudderstack/archive/profiles/0.12/get-started/import-from-git.md
# Import Profiles Project from Git

> ![danger](/docs/images/warning.svg)
> 
> You are viewing documentation for an older version.
> 
> [Click here to view the latest documentation.](</docs/profiles/overview>)

# Import Profiles Project from Git

Import an existing Profiles project from the Git repository in RudderStack dashboard.

* * *

  * __2 minute read

  * 


If you have created a Profiles project using the **Profile Builder** (command-line tool), you can make it [available in a Git repository](<https://docs.github.com/en/repositories/creating-and-managing-repositories/quickstart-for-repositories>), and further import it in the RudderStack dashboard to:

  * View the project, its details, and the output tables in the UI.
  * Schedule its invocation periodically (for example, every 12 hours, 6 hours, etc.).
  * Seamlessly collaborate with your teammates, with modular control over your model files.


## Prerequisites

  * Profiles project in a Git repository


> ![info](/docs/images/info.svg)
> 
> RudderStack recommends using a different target schema and user for Profiles for RudderStack dashboard than the one used for CLI project. This will maintain differentiation in case of manual runs (using CLI) and scheduled runs (using RudderStack dashboard):

[![](/docs/images/profiles/DifferentSchemasWebCLI.webp)](</docs/images/profiles/DifferentSchemasWebCLI.webp>)

## Steps

To import the Profiles project from a Git repository in the RudderStack dashboard:

  1. Log in to the [RudderStack dashboard](<https://app.rudderstack.com>) and go to **Unify** > **Profiles** option in the left sidebar.
  2. Click **Create project**.

[![Choose predefined template](/docs/images/profiles/create-project.webp)](</docs/images/profiles/create-project.webp>)

  3. Select **Import project from Git Repo** on the next screen.
  4. Enter a unique name and description for your Profiles project.
  5. Enter the [SSH URL of your Git repository](<https://docs.github.com/en/authentication/connecting-to-github-with-ssh>) to be used for your Profiles project.


> ![warning](/docs/images/warning.svg)
> 
> Make sure the SSH URL you provide contains the Profiles project, otherwise it can result in an error.

  6. Copy the SSH public key and click **Add deploy key** which will take you to your git repository’s **Deploy keys** section. See [Set up deploy keys](<https://docs.github.com/en/authentication/connecting-to-github-with-ssh/managing-deploy-keys#set-up-deploy-keys>) for more information.
  7. Select the warehouse and enter its credentials to store this Profiles project.
  8. Finally, click **Create Profiles project**.


Next, choose any of the following options:

  * **View Profiles project** which takes you to the **Overview** tab of the project to view project details.
  * **Run Profiles project** which takes you to the **History** tab of the project from where you can click **Run** to run the project.


You can explore other project settings in the different tabs. For more information, see [Profile details](<https://www.rudderstack.com/docs/archive/profiles/0.12/get-started/quickstart-ui/#profile-details>).

  * [![](/docs/images/previous.svg)Previous](</docs/archive/profiles/0.12/get-started/quickstart-ui/>)
  * [Next ![](/docs/images/next.svg)](</docs/archive/profiles/0.12/get-started/sample-data/>)